force-app/main/default/objects/clariti__CartItemSettings__mdt/clariti__CartItemSettings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for mapping parent objects for Financials</description>
    <label>Cart Item Settings</label>
    <pluralLabel>Cart Item Settings</pluralLabel>
</CustomObject>