force-app/main/default/objects/clariti__CartItemSettings__mdt/fields/clariti__AccountField__c.field-meta.xml
<CustomField>
    <fullName>clariti__AccountField__c</fullName>
    <description>Mapping to the field(s) which contains the information of the Account of the payable object</description>
    <inlineHelpText>Mapping to the field(s) which contains the information of the Account of the payable object</inlineHelpText>
    <label>Account Field(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>