force-app/main/default/objects/clariti__CartItemSettings__mdt/fields/clariti__CartFieldSet__c.field-meta.xml
<CustomField>
    <fullName>clariti__CartFieldSet__c</fullName>
    <description>Name of the field set to be in the cart for the payable object</description>
    <inlineHelpText>Name of the field set to be in the cart for the payable object</inlineHelpText>
    <label>Cart Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>