force-app/main/default/objects/clariti__CartItemSettings__mdt/fields/clariti__CartItemField__c.field-meta.xml
<CustomField>
    <fullName>clariti__CartItemField__c</fullName>
    <description>Specify the field on Cart Item object which would map to the payable object</description>
    <inlineHelpText>Specify the field on Cart Item object which would map to the payable object</inlineHelpText>
    <label>Cart Item Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>