force-app/main/default/objects/clariti__CartItemSettings__mdt/fields/clariti__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>clariti__ObjectAPIName__c</fullName>
    <description>Specify the API name of the source payable object</description>
    <inlineHelpText>Specify the API name of the source payable object</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>