force-app/main/default/objects/clariti__CartItemSettings__mdt/fields/clariti__OutstandingAmountField__c.field-meta.xml
<CustomField>
    <fullName>clariti__OutstandingAmountField__c</fullName>
    <description>Mapping to the field which contains the outstanding payable amount in the payable object</description>
    <inlineHelpText>Mapping to the field which contains the outstanding payable amount in the payable object</inlineHelpText>
    <label>Outstanding Amount Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>